<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.1.0</version>
  <description>
    A C++ AprilTags library
  </description>
  <author>Michael Kaess</author>
  <maintainer email="mhkabir98@gmail.com">Mohammed Kabir</maintainer>
  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>

</package>
